disabled deploy redis, added deploy dash to cloudflare pages

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ REMOTE_SERVER=
 REMOTE_USER=
 REMOTE_SSH_KEY_FILE=
 REMOTE_DIRECTORY=
+
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_PAGE_PROJECT_NAME=
